--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@
                 </ul>
             </nav>
         </div>
+
+
+        <div class="container">
+            <div class="content-1">
+                <h1>Built for developers</h1>
+                <p>GitHub is a development platform inspired by the way you work.
+                    From <strong>open source</strong> to <strong>business</strong>, you can host and review code, manage
+                    projects, and build software alongside 40 million developers.
+                </p>
+            </div>
+            <div class="content-2">
+                <form class="content-form" action="">
+                    <div class="form-control">
+                        <label for="Username">Username</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-control">
+                        <label for="Email">Email</label>
+                        <input type="text">
+                    </div>
+                    <div class="form-control">
+                        <label for="Password">Password</label>
+                        <input type="text">
+                    </div>
+
+                </form>
+                <p>Make sure it's at least 15 characters OR at least 8 characters
+                    including a number and a lowercase letter. <a href="">Learn more</a>
+                </p>
+                <button id="btn">Sign up for GitHub</button>
+                <p>By clicking "Sign up for GitHub", you agree to our <strong>Terms of Service</strong>
+                    and <strong>Privacy Statement</strong>. We'll occasionally send your account related emails.
+                </p>
+            </div>
+        </div>
     </header>
 
 </body>
